# AlGo_compiler

./: CMakeLists.txt  analyzer.cpp  analyzer.h  definitions.cpp  definitions.h  lexical_analyzer.cpp  lexical_analyzer.h  lexical_descriptor.cpp  lexical_descriptor.h  main.cpp  productions.csv  rule_context.cpp  rule_context.h  semantic_rules.cpp  semantic_rules.h  source_code.cpp  source_code.h  symbol_table.cpp  symbol_table.h  symbol_table_record.h  syntactic_table.csv  syntax_analyzer.cpp  syntax_analyzer.h
